--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.3.4",
     "jade": "*",
     "ws": "~0.4.30",
-    "nodemon": "~0.7.10"
+    "nodemon": "~0.7.10",
+    "mongoose": "~3.6.19"
   }
 }
