--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "nodemon": "~0.7.10",
     "mongoose": "~3.6.19",
     "socket.io": "~0.9.16",
-    "xmldoc": "~0.1.2"
+    "xml2js": "~0.2.8"
   }
 }
