--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "nodemon": "~0.7.10",
     "mongoose": "~3.6.19",
     "socket.io": "~0.9.16",
-    "xml2js": "~0.2.8"
+    "xml2js": "~0.2.8",
+    "backbone": "~1.0.0",
+    "stylus": "~0.37.0",
+    "nib": "~1.0.1"
   }
 }
